<!--
  ~ Copyright (C) 2016
  ~  Created by: usenka, jwu5, cdmacken, jvogel, asanche
  ~  This program is free software; you can redistribute it and/or modify it under the terms of the
  ~  GNU General Public License as published by the Free Software Foundation; either version 2 of the
  ~  License, or (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY
  ~  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE
  ~  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program; if
  ~ not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
  ~ 02110-1301, USA.
  -->

<resources>
    <string name="app_name">Dryver</string>

    <string name="done">Done</string>
    <string name="new_user">New user?</string>
    <string name="existing_user">Existing user?</string>
    <string name="enter_trip_price">Enter trip cost</string>
    <string name="ryde">Ryde</string>
    <string name="dryve">Dryve</string>
    <string name="save_changes">Save</string>
    <string name="choose_driver">Accept as Driver</string>
    <string name="meters">Minimum Distance(Meters)</string>
    <string name="search">Search</string>
    <string name="empty">Leave Empty</string>
    <string name="keyword">Keyword</string>
    <string name="rate">Minimum Rate($/km)</string>
    <string name="cost">Minimum Cost($)</string>
    <string name="active">Your Active Rides</string>


    <string name="view_profile">View Profile</string>

    <string name="activity_registration_title">Registration</string>
    <string name="activity_registration_instructions">Please fill all fields.</string>
    <string name="activity_registration_username">Username</string>
    <string name="activity_registration_firstname">First Name</string>
    <string name="activity_registration_lastname">Last Name</string>
    <string name="activity_registration_phone">Phone Number</string>
    <string name="activity_registration_email">Email Address</string>

    <string name="activity_login_username">Username</string>
    <string name="activity_login_login">Login</string>

    <string name="activity_openingpage_newuser">New User?</string>
    <string name="activity_openingpage_register">Sign Up</string>
    <string name="activity_openingpage_existinguser">Existing User?</string>
    <string name="activity_openingpage_login">Sign In</string>

    <string name="activity_request_selection_title">ActivityRequestSelection</string>
    <string name="activity_request_selection_Profile">Profile</string>
    <string name="activity_request_selection_Request">Request</string>
    <string name="activity_request_selection_Status">Status</string>

    <string name="activity_edit_profile_title">Edit Profile</string>
    <string name="activity_edit_profile_UserName">Username</string>
    <string name="activity_edit_profile_Email">Email</string>
    <string name="activity_edit_profile_PhoneNumber">Phone Number</string>
    <string name="activity_edit_profile_PaymentMethod">Payment Method</string>
    <string name="activity_edit_profile_saveButton">Save Changes</string>
    <string name="activity_edit_profile_vehicle_description">Vehicle Description</string>

    <string name="activity_driver_profile_vehicle_info">Vehicle Information</string>
    <string name="activity_driver_profile_ratings">Average Rating</string>

    <string name="title_activity_request_selection_NewRequest">Make Request</string>

    <string name="request_item_Name">Request Name</string>
    <string name="request_item_Destination">Destination</string>
    <string name="request_item_StatusName">Status</string>
    <string name="request_item_Date">Date</string>
    <string name="request_item_Placeholder">Placeholder</string>

    <string name="activity_rider_request_Profile">Profile</string>
    <string name="activity_rider_request_Request">Request</string>
    <string name="activity_rider_request_Status">Status</string>
    <string name="activity_rider_request_NewRequest">Make Request</string>
    <string name="ryder_main_title">Open Requests:</string>

    <!--Dialog popup Strings-->
    <string name="drivers_found_message">Drivers have been found for one of your requests! Either view the list of divers, or close this window.</string>
    <string name="drivers_found_title">Drivers Found</string>
    <string name="close">Close</string>
    <string name="drivers_found_view">View Driver List</string>
    <string name="rating_message">A request you are involved in is complete! Please rate your experience in the request view.</string>

    <string name="complete_title">Request Complete</string>
    <string name="complete_message">A request you are involved in has been completed!</string>

    <string name="dryver_selected_message">You have been selected by a ryder to fill their request!</string>
    <string name="dryver_selected_title">You Were Selected</string>
    <string name="view_request">View Request</string>

    <string name="activity_request_text_tripcost">Enter trip cost</string>
    <string name="activity_request_button_submit">Submit</string>
    <string name="activity_request_button_location">Set Route</string>
    <string name="activity_request_location">Location</string>

    <string name="activity_request_selection_RequestDetails">Request Details</string>
    <string name="activity_request_selection_Name">Rider Name</string>
    <string name="activity_request_selection_location">Location</string>
    <string name="activity_request_selection_Date">Date Created</string>
    <string name="activity_request_selection_Edit">Edit Request</string>
    <string name="activity_request_selection_Cancel">Cancel Request</string>
    <string name="activity_request_selection_Delete">Delete Request</string>
    <string name="activity_request_selection_ViewDriver">View Drivers</string>

    <string name="activity_email_subject">Subject...</string>
    <string name="activity_email_body">Enter email body here...</string>
    <string name="activity_email_send">Send Email</string>

    <string name="activity_rider_request_search">Search By:</string>

    <string name="activity_driver_list_title">Drivers</string>

    <string name="request_item_pickup">Pickup Location</string>
    <string name="request_item_Rate">Rate</string>
    <string name="request_item_Cost">Cost</string>
    <string name="google_api_key">AIzaSyCUdfcLLIkGiLLkF95uGQHww8Y0whSX2a4</string>
    <string name="activity_driver_CurrentLocation">Get Location</string>
    <string name="logout">Logout</string>
    <string name="map_activity_forward">forward</string>
    <string name="action_settings">Action Setting</string>
    <string name="action_forward">Action Forward</string>
    <string name="action_delete">Action Delete</string>
    <string name="action_search">Action Search</string>
    <string name="action_direction">Action Direction</string>
    <string name="activity_dryver_selection_location">location</string>
    <string name="activity_dryver_selection_Date">date</string>
    <string name="activity_dryver_selection_Status">status</string>
    <string name="activity_dryver_selection_AcceptRequest">Accept Request</string>
    <string name="activity_dryver_selection_CancelRequest">Cancel Request</string>
    <string name="activity_dryver_selection_RequestDetails">Request Details</string>
    <string name="activity_dryver_selection_riderID">Rider ID</string>
    <string name="activity_dryver_selection_Description">implement Description for request</string>
    <string name="requestDriverListDriverID">driver id goes here</string>
    <string name="activity_dryver_selection_Map">View Map</string>
</resources>
