<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driver_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dryver.Activities.ActivityDryverSelection">


    <TextView
        android:text="@string/activity_dryver_selection_RequestDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/dryverSelectionTitle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dryverSelectionAcceptButton"
        android:layout_below="@+id/dryverSelectionTitle">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/activity_dryver_selection_riderID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dryverSelectionTitle"
                android:id="@+id/dryverSelectionRiderID"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />

            <TextView
                android:text="@string/activity_dryver_selection_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dryverSelectionRiderID"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:id="@+id/dryverSelectionLocation"
                android:maxLines="7"/>

            <TextView
                android:text="@string/activity_dryver_selection_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dryverSelectionLocation"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:id="@+id/dryverSelectionDate"/>

            <TextView
                android:text="@string/activity_dryver_selection_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dryverSelectionDate"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:id="@+id/dryverSelectionDescription"/>

            <TextView
                android:text="@string/activity_dryver_selection_Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dryverSelectionDescription"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:id="@+id/dryverSelectionToStatus"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dryverSelectionText">


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:text="@string/activity_dryver_selection_CancelRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/dryverSelectionCancelButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/activity_dryver_selection_AcceptRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/dryverSelectionAcceptButton"
        android:layout_above="@+id/dryverSelectionCancelButton"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/activity_dryver_selection_Map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/dryverSelectionMapButton"
        android:layout_above="@+id/dryverSelectionAcceptButton"
        android:layout_alignParentStart="true" />


</RelativeLayout>
