<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016
  ~ Created by: usenka, jwu5, cdmacken, jvogel, asanche
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dryver.Activities.ActivityRyderSelection">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/requestSelectionButtonViewList"
        android:layout_alignParentTop="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/activity_request_selection_RequestDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/requestSelectionTitle"/>

                <TextView
                    android:text="@string/activity_request_selection_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/requestSelectionTitle"
                    android:paddingLeft="20dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:id="@+id/requestSelectionLocation"
                    android:maxLines="7"/>

                <TextView
                    android:text="@string/activity_request_selection_Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/requestSelectionLocation"
                    android:paddingLeft="20dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:id="@+id/requestSelectionDate"/>

                <TextView
                    android:text="@string/activity_request_selection_Status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/requestSelectionDate"
                    android:paddingLeft="20dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:id="@+id/requestSelectionToStatus"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:text="@string/activity_request_selection_Delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/requestSelectionButtonDelete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/activity_request_selection_Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/requestSelectionButtonCancel"
        android:layout_above="@+id/requestSelectionButtonDelete"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/activity_request_selection_ViewDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/requestSelectionButtonViewList"
        android:layout_above="@+id/requestSelectionButtonCancel"
        android:layout_alignParentStart="true" />


</RelativeLayout>
