<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dryver.Activities.ActivityEmail">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_to"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/email_subject"
        android:hint="@string/activity_email_subject"
        android:layout_below="@+id/email_to"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/activity_email_send"
        android:layout_height="wrap_content"
        android:id="@+id/email_send"
        android:layout_width="fill_parent"
        android:layout_below="@+id/email_body"
        android:layout_alignParentStart="true"/>

    <EditText
        android:gravity="top|left"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/email_body"
        android:hint="@string/activity_email_body"
        android:layout_below="@+id/email_subject"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
